Enable preview features and add Study001 for test preview feature